// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Remove Test: After calling remove 1`] = `
Object {
  "createState": Object {
    "formModel": Object {
      "result": Object {
        "id": 0,
        "myNum": 420,
        "myString": "myText",
      },
    },
  },
  "getState": Object {
    "simpleTestCol": Object {},
  },
  "updateState": Object {},
}
`;

exports[`DbStore Remove Test: before anything 1`] = `
Object {
  "createState": Object {},
  "getState": Object {},
  "updateState": Object {},
}
`;

exports[`DbStore Remove Test: createresult 1`] = `
Object {
  "result": Object {
    "id": 0,
    "myNum": 420,
    "myString": "myText",
  },
}
`;

exports[`DbStore Remove Test: removeresult 1`] = `
Object {
  "result": Object {
    "id": 0,
    "myNum": 420,
    "myString": "myText",
  },
}
`;
